--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,6 +11,13 @@
     }
 }
 
+.arrow-cursor {
+    color: #FFF;
+    pointer-events: none;
+    transition: opacity 0.2s ease;
+    z-index: 9999999999999999;
+}
+
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
