--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
     body {
-        @apply bg-black box-border m-0 p-0 scroll-smooth;
+        @apply box-border p-0 m-0 bg-black scroll-smooth;
     }
     ul {
         @apply p-0;
@@ -46,4 +46,16 @@ input[type=number] {
     top: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+}
+
+.content-parallax-image-heading{
+    position: absolute;
+    text-transform: uppercase;
+    color: #000;
+    overflow: visible;
+    z-index: 99;
+    text-align: center;
+    font-weight: bolder;
+    font-size: 60px;
+    margin-left: 2rem;
 }
