--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -59,3 +59,20 @@ input[type=number] {
     font-size: 60px;
     margin-left: 2rem;
 }
+
+.myVideo {
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 80vh;
+    z-index: -1;
+    object-fit: cover;
+  }
+  /* .video-container {
+    position: fixed;
+    width: 100%;
+    height: 10%;
+    z-index: -1;
+  } */
